[gd_scene load_steps=66 format=3 uid="uid://nftmnhwv8jce"]

[ext_resource type="Texture2D" uid="uid://4cd2j1vusddt" path="res://Art/Character/HeroKnight/HeroKnight.png" id="1_are1r"]
[ext_resource type="Script" path="res://Scenes/Player/player.gd" id="1_p54w3"]
[ext_resource type="Script" path="res://Scenes/Player/StateMachine.gd" id="3_acvpa"]
[ext_resource type="Script" path="res://Scenes/Player/GroundState.gd" id="4_yibkx"]
[ext_resource type="Script" path="res://Scenes/Player/AirState.gd" id="5_oltm5"]
[ext_resource type="Script" path="res://Scenes/Player/StateDebugLabel.gd" id="5_rexe5"]
[ext_resource type="Script" path="res://Scenes/Player/AttackState.gd" id="6_wh8ac"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_5g8h2"]
radius = 11.0
height = 40.0

[sub_resource type="Animation" id="Animation_v50xi"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_furjt"]
resource_name = "attack1"
length = 0.6
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("1_are1r")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [10]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:vframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [9]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Sprite2D:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [18, 19, 20, 21, 22, 23]
}

[sub_resource type="Animation" id="Animation_xcyv4"]
resource_name = "attack2"
length = 0.6
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("1_are1r")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [10]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:vframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [9]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Sprite2D:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [24, 25, 26, 27, 28, 29]
}

[sub_resource type="Animation" id="Animation_6554n"]
resource_name = "attack3"
length = 0.8
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("1_are1r")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [10]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:vframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [9]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Sprite2D:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [30, 31, 32, 33, 34, 35, 36, 37]
}

[sub_resource type="Animation" id="Animation_ux286"]
resource_name = "block_effect"
length = 0.6
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [66, 67, 68, 69, 70, 65]
}

[sub_resource type="Animation" id="Animation_lw8oh"]
resource_name = "block_idle"
length = 0.8
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [58, 59, 60, 61, 62, 63, 64, 65]
}

[sub_resource type="Animation" id="Animation_udur6"]
resource_name = "death"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("1_are1r")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [10]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:vframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [9]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Sprite2D:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [48, 49, 50, 51, 52, 53, 54, 55, 56, 57]
}

[sub_resource type="Animation" id="Animation_5s2fr"]
resource_name = "hurt"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("1_are1r")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [10]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:vframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [9]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Sprite2D:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [45, 46, 47]
}

[sub_resource type="Animation" id="Animation_rutac"]
resource_name = "idle"
length = 0.8
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:hframes")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [10]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:vframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [9]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7]
}

[sub_resource type="Animation" id="Animation_hfmny"]
resource_name = "jump"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(),
"transitions": PackedFloat32Array(),
"update": 1,
"values": []
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(),
"transitions": PackedFloat32Array(),
"update": 1,
"values": []
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:vframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(),
"transitions": PackedFloat32Array(),
"update": 1,
"values": []
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Sprite2D:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [38, 39, 40]
}

[sub_resource type="Animation" id="Animation_02w6w"]
resource_name = "land"
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("1_are1r")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [10]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:vframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [9]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Sprite2D:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [41, 42, 43, 44]
}

[sub_resource type="Animation" id="Animation_2i3jb"]
resource_name = "roll"
length = 0.45
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.05, 0.1, 0.15, 0.2, 0.25, 0.3, 0.35, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [71, 72, 73, 74, 75, 76, 77, 78, 79]
}

[sub_resource type="Animation" id="Animation_qcwwc"]
resource_name = "run"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("1_are1r")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [10]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:vframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [9]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Sprite2D:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [8, 9, 10, 11, 12, 13, 14, 15, 16, 17]
}

[sub_resource type="Animation" id="Animation_x3h0w"]
resource_name = "wall_grab"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [80, 81, 82, 83, 84]
}

[sub_resource type="Animation" id="Animation_183rq"]
resource_name = "wall_slide"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [85, 86, 87, 88, 89]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_hjsw8"]
_data = {
"RESET": SubResource("Animation_v50xi"),
"attack1": SubResource("Animation_furjt"),
"attack2": SubResource("Animation_xcyv4"),
"attack3": SubResource("Animation_6554n"),
"block_effect": SubResource("Animation_ux286"),
"block_idle": SubResource("Animation_lw8oh"),
"death": SubResource("Animation_udur6"),
"hurt": SubResource("Animation_5s2fr"),
"idle": SubResource("Animation_rutac"),
"jump": SubResource("Animation_hfmny"),
"land": SubResource("Animation_02w6w"),
"roll": SubResource("Animation_2i3jb"),
"run": SubResource("Animation_qcwwc"),
"wall_grab": SubResource("Animation_x3h0w"),
"wall_slide": SubResource("Animation_183rq")
}

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_2im1f"]
animation = &"attack1"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_xdiuj"]
animation = &"attack2"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_0r18d"]
animation = &"attack3"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_ns378"]
animation = &"block_effect"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_qve12"]
animation = &"block_idle"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_d058h"]
animation = &"death"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_ykffj"]
animation = &"hurt"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_b2xvh"]
animation = &"jump"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_kr6gm"]
animation = &"land"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_fsgee"]
animation = &"idle"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_qmdvq"]
animation = &"run"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_ca3co"]
animation = &"run"

[sub_resource type="AnimationNodeBlendSpace1D" id="AnimationNodeBlendSpace1D_f1l7a"]
blend_point_0/node = SubResource("AnimationNodeAnimation_fsgee")
blend_point_0/pos = 0.0
blend_point_1/node = SubResource("AnimationNodeAnimation_qmdvq")
blend_point_1/pos = -1.0
blend_point_2/node = SubResource("AnimationNodeAnimation_ca3co")
blend_point_2/pos = 1.0
blend_mode = 1

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_b06k1"]
animation = &"roll"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_xisx3"]
animation = &"wall_grab"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_t2yfa"]
animation = &"wall_slide"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_6mfat"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_ajfak"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_2kfk1"]
switch_mode = 2
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_1vum0"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_2mwmo"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_socs0"]
switch_mode = 2
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_pd7j4"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_d0i8b"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_yfh8y"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_n5xir"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_lfdlw"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_aoib7"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_wffbu"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_7b3j1"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_if4j1"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_51vf6"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_83ps7"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_f56jn"]
switch_mode = 2
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_gaouw"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_rhl01"]
switch_mode = 2
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_vvfh8"]
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_a3tfh"]
switch_mode = 2
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_40jyf"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_skl70"]

[sub_resource type="AnimationNodeStateMachine" id="AnimationNodeStateMachine_1oqgo"]
states/End/position = Vector2(1227, 465)
states/Start/position = Vector2(486, 427)
states/attack1/node = SubResource("AnimationNodeAnimation_2im1f")
states/attack1/position = Vector2(850, 665)
states/attack2/node = SubResource("AnimationNodeAnimation_xdiuj")
states/attack2/position = Vector2(1019, 665)
states/attack3/node = SubResource("AnimationNodeAnimation_0r18d")
states/attack3/position = Vector2(1187, 665)
states/block_effect/node = SubResource("AnimationNodeAnimation_ns378")
states/block_effect/position = Vector2(521, 226)
states/block_idle/node = SubResource("AnimationNodeAnimation_qve12")
states/block_idle/position = Vector2(521, 340)
states/death/node = SubResource("AnimationNodeAnimation_d058h")
states/death/position = Vector2(1133, 465)
states/hurt/node = SubResource("AnimationNodeAnimation_ykffj")
states/hurt/position = Vector2(1047, 465)
states/jump/node = SubResource("AnimationNodeAnimation_b2xvh")
states/jump/position = Vector2(826, 239)
states/land/node = SubResource("AnimationNodeAnimation_kr6gm")
states/land/position = Vector2(690, 239)
states/move/node = SubResource("AnimationNodeBlendSpace1D_f1l7a")
states/move/position = Vector2(725, 439)
states/roll/node = SubResource("AnimationNodeAnimation_b06k1")
states/roll/position = Vector2(503, 529)
states/wall_grab/node = SubResource("AnimationNodeAnimation_xisx3")
states/wall_grab/position = Vector2(942, 243)
states/wall_slide/node = SubResource("AnimationNodeAnimation_t2yfa")
states/wall_slide/position = Vector2(1068, 238)
transitions = ["jump", "wall_grab", SubResource("AnimationNodeStateMachineTransition_6mfat"), "wall_grab", "wall_slide", SubResource("AnimationNodeStateMachineTransition_ajfak"), "jump", "land", SubResource("AnimationNodeStateMachineTransition_2kfk1"), "move", "roll", SubResource("AnimationNodeStateMachineTransition_1vum0"), "move", "jump", SubResource("AnimationNodeStateMachineTransition_2mwmo"), "roll", "move", SubResource("AnimationNodeStateMachineTransition_socs0"), "move", "attack1", SubResource("AnimationNodeStateMachineTransition_pd7j4"), "attack1", "attack2", SubResource("AnimationNodeStateMachineTransition_d0i8b"), "attack2", "attack3", SubResource("AnimationNodeStateMachineTransition_yfh8y"), "attack1", "move", SubResource("AnimationNodeStateMachineTransition_n5xir"), "attack2", "move", SubResource("AnimationNodeStateMachineTransition_lfdlw"), "attack3", "move", SubResource("AnimationNodeStateMachineTransition_aoib7"), "move", "hurt", SubResource("AnimationNodeStateMachineTransition_wffbu"), "hurt", "move", SubResource("AnimationNodeStateMachineTransition_7b3j1"), "hurt", "death", SubResource("AnimationNodeStateMachineTransition_if4j1"), "block_idle", "block_effect", SubResource("AnimationNodeStateMachineTransition_51vf6"), "move", "block_idle", SubResource("AnimationNodeStateMachineTransition_83ps7"), "block_effect", "block_idle", SubResource("AnimationNodeStateMachineTransition_f56jn"), "block_idle", "move", SubResource("AnimationNodeStateMachineTransition_gaouw"), "death", "End", SubResource("AnimationNodeStateMachineTransition_rhl01"), "Start", "move", SubResource("AnimationNodeStateMachineTransition_vvfh8"), "wall_slide", "move", SubResource("AnimationNodeStateMachineTransition_a3tfh"), "wall_grab", "jump", SubResource("AnimationNodeStateMachineTransition_40jyf"), "land", "move", SubResource("AnimationNodeStateMachineTransition_skl70")]
graph_offset = Vector2(354, 154)

[node name="Player" type="CharacterBody2D"]
script = ExtResource("1_p54w3")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_are1r")
hframes = 10
vframes = 9

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 6)
shape = SubResource("CapsuleShape2D_5g8h2")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_hjsw8")
}

[node name="AnimationTree" type="AnimationTree" parent="."]
libraries = {
"": SubResource("AnimationLibrary_hjsw8")
}
tree_root = SubResource("AnimationNodeStateMachine_1oqgo")
anim_player = NodePath("../AnimationPlayer")
parameters/move/blend_position = -0.00187969

[node name="StateMachine" type="Node" parent="." node_paths=PackedStringArray("character", "animation_tree", "current_state")]
script = ExtResource("3_acvpa")
character = NodePath("..")
animation_tree = NodePath("../AnimationTree")
current_state = NodePath("GroundState")

[node name="GroundState" type="Node" parent="StateMachine" node_paths=PackedStringArray("air_state", "attack_state")]
script = ExtResource("4_yibkx")
jump_velocity = -300.0
air_state = NodePath("../AirState")
attack_state = NodePath("../AttackState")

[node name="AirState" type="Node" parent="StateMachine" node_paths=PackedStringArray("ground_state")]
script = ExtResource("5_oltm5")
ground_state = NodePath("../GroundState")

[node name="AttackState" type="Node" parent="StateMachine"]
script = ExtResource("6_wh8ac")

[node name="StateDebugLabel" type="Label" parent="." node_paths=PackedStringArray("state_machine")]
offset_left = -48.0
offset_top = -67.0
offset_right = 48.0
offset_bottom = -18.0
text = "State: 
Facing: "
script = ExtResource("5_rexe5")
state_machine = NodePath("../StateMachine")
